<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group3"
        android:checkableBehavior="single">

        <item
            android:id="@+id/contact"
            android:icon="@drawable/ic_contact1"
            android:title="@string/contact" />
        <item
            android:id="@+id/instructors"
            android:icon="@drawable/ic_contact1"
            android:title="@string/our_instructors" />
        <item
            android:id="@+id/mycourses"
            android:icon="@drawable/courses"
            android:title="@string/my_courses" />
        <item
            android:id="@+id/short_lesson"
            android:icon="@drawable/courses"
            android:title="@string/short_lesson" />
        <item
            android:id="@+id/eGift"
            android:icon="@drawable/ic_baseline_card_giftcard_24"
            android:title="@string/e_gift" />
        <item
            android:id="@+id/about_us"
            android:icon="@drawable/ic_about"
            android:title="@string/about" />
        <item
            android:id="@+id/menu_rate"
            android:icon="@drawable/ic_rate"
            android:title="@string/rate" />
        <item
            android:id="@+id/menu_share"
            android:icon="@drawable/ic_share"
            android:title="@string/sharapp" />

    </group>


    <group
        android:id="@+id/group4"
        android:checkableBehavior="single">

        <item
            android:id="@+id/faq"
            android:icon="@drawable/ic_faq"
            android:title="@string/faq" />
        <item
            android:id="@+id/menu_terms"
            android:icon="@drawable/ic_terms"
            android:title="@string/terms_conditions" />
        <item
            android:id="@+id/menu_privacy"
            android:icon="@drawable/ic_privacy"
            android:title="@string/privacy_policy" />

    </group>

    <item
        android:id="@+id/menu_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout" />

</menu>